--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^0.28.9",
+    "hard-source-webpack-plugin": "^0.5.18",
     "ts-loader": "^3.5.0",
     "tslint": "^5.9.1",
     "tslint-loader": "^3.5.3",
@@ -20,6 +21,7 @@
     "webpack": "^3.11.0"
   },
   "dependencies": {
+    "element-ui": "^2.2.0",
     "vue": "^2.5.13"
   }
 }
