--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^0.28.9",
-    "hard-source-webpack-plugin": "^0.5.18",
-    "ts-loader": "^3.5.0",
+    "hard-source-webpack-plugin": "^0.6.4",
+    "ts-loader": "^4.0.1",
     "tslint": "^5.9.1",
     "tslint-loader": "^3.5.3",
     "typescript": "^2.7.1",
     "vue-class-component": "^6.1.2",
     "vue-loader": "^14.1.1",
     "vue-template-compiler": "^2.5.13",
-    "webpack": "^3.11.0"
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.11"
   },
   "dependencies": {
     "element-ui": "^2.2.0",
